fixed menu overflow

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ font-size: 20px;
   
 .dropbtn {
   background-color: transparent;
-  width: 200px;
+  width: 170px;
   margin:0;
   color: white;
   padding: 25px;
